unpackaged/main/default/objects/OrderApi__Sales_Order_R__c/OrderApi__Sales_Order_R__c.object-meta.xml
<CustomObject>
    <description>The primary object for all Sales related transactions that track the Reporting currency when Fonteva&#39;s multi-currency is enabled.</description>
    <label>Sales Order (R)</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Sales Order (R Name)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders (R)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>