unpackaged/main/default/objects/OrderApi__Sales_Order_R__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the order to the Business Group.</description>
    <inlineHelpText>Relates the order to the Business Group.</inlineHelpText>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipLabel>Sales Orders (R)</relationshipLabel>
    <relationshipName>Sales_Orders_R</relationshipName>
    <type>Lookup</type>
</CustomField>