unpackaged/main/default/objects/OrderApi__Sales_Order_R__c/fields/OrderApi__Credits_Applied__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Credits_Applied__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This value stores the sum of credits applied for each item in the Sales Order, in the reporting currency.</description>
    <inlineHelpText>This value stores the sum of credits applied for each item in the Sales Order, in the reporting currency.</inlineHelpText>
    <label>Credits Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>