unpackaged/main/default/objects/OrderApi__Sales_Order_R__c/fields/OrderApi__Is_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the related Sales Order Posting Entity set as Invoice. Inherits the value from related Sales Order Record.</description>
    <inlineHelpText>Checked when the related Sales Order Posting Entity set as Invoice. Inherits the value from related Sales Order Record.</inlineHelpText>
    <label>Is Invoiced</label>
    <type>Checkbox</type>
</CustomField>